# mixr

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build-linux.sh  build.rs  cbindgen.toml  library.h  mixr.h
cmixr/: mixr.h
dna/: Cargo.toml
examples/: play_stream.rs  play_wav.rs
include/mixr/: AudioBuffer.h  AudioDevice.h  AudioFormat.h  AudioSource.h  Common.h  Context.h  Device.h  common.h  context.h  device.h  mixr.h  mixr.hpp  stream.h
include/mixr/Device/: AlsaDevice.h  SdlDevice.h
include/mixr/Stream/: AudioStream.h  AudioStream.hpp  Flac.h  Flac.hpp  Mp3.h  Mp3.hpp  Vorbis.h  Vorbis.hpp  Wav.h  Wav.hpp
include/mixr/Utils/: ADPCM.h
include/mixr/stream/: stream.h  wav.h
mixr/: Cargo.toml  build.rs  cbindgen.toml  mixr.h
mixr-native/: Cargo.toml
mixr-native/src/: lib.rs
mixr/examples/: play_stream.rs
mixr/src/: cmixr.rs  device.rs  engine.rs  lib.rs  loaders.rs  native.rs  stream.rs  system.rs
mixr/tests/: main_tests.rs
mxload/: Cargo.toml
mxload/src/: lib.rs  module.rs  stream.rs  wav.rs
mxload/tests/: test_load.rs  test_play.rs
mxplay/: Cargo.toml
mxplay/src/: main.rs
src/: AudioBuffer.cpp  AudioDevice.cpp  AudioSource.cpp  Buffer.cpp  Buffer.h  Context.cpp  MixrC.cpp  binary_reader.rs  cmixr.rs  engine.rs  lib.rs  loaders.rs  system.rs
src/C/: Flac.cpp  Mixr.cpp  MixrSDL.cpp  Mp3.cpp  Stream.cpp  Vorbis.cpp  Wav.cpp
src/Device/: AlsaDevice.cpp  AlsaDevice.h  SdlDevice.cpp  SdlDevice.h
src/Impl/: ADPCM.cpp  ADPCM.h  Impl.cpp  Impl.h
src/Stream/: Flac.cpp  Mp3.cpp  Vorbis.cpp  Wav.cpp
src/Utils/: ADPCM.cpp
src/loaders/: stb_vorbis.c
src/loaders/polymod/: sample.rs  track.rs  track_player.rs
src/mixr/: Context.c  context.c  internal.c  internal.h
src/mixr/device/: device.c  deviceimpl.h  impl_device.h
src/mixr/device/ALSA/: alsa_device.c  alsa_device.h
src/mixr/device/SDL/: sdl_device.c  sdl_device.h
src/mixr/stream/: flac.c  mp3.c  stream.c  stream_internal.h  vorbis.c  wav.c
src/mixr/utils/: vector.c  vector.h
tests/: ctest.c  main.cpp  stb_vorbis.rs  test_audio.rs  test_binary.rs  test_streaming.rs
