[package]
name = "mixr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false

[dev-dependencies]
sdl2 = "0.35.2"