[package]
name = "mixr"
description = "An audio resampler & mixer."
version = "0.3.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/piegfx/mixr"
license = "MIT"
keywords = ["audio", "gamedev", "mixer", "resampler"]
categories = ["game-development", "multimedia::audio"]

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false

[dev-dependencies]
sdl2 = "0.35.2"
libc = "0.2.138"