[package]
name = "mixr"
description = "An audio resampler & mixer."
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/piegfx/mixr"
license = "MIT"
keywords = ["audio", "gamedev", "mixer", "resampler"]
categories = ["game-development", "multimedia::audio"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false
strip = true

[dev-dependencies]
sdl2 = "0.35.2"
libc = "0.2.138"
ctrlc = "3.2.4"