[package]
name = "mixr"
description = "An audio resampler & mixer."
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/piegfx/mixr"
license = "MIT"
keywords = ["audio", "gamedev", "mixer", "resampler"]
categories = ["game-development", "multimedia::audio"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
cmixr = []
loaders = []
#engine = ["loaders", "dep:sdl2"]
#engine = ["loaders"]

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false
strip = true
lto = true