[package]
name = "mixr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
#sdl2 = { version = "0.35.2", features = ["bundled"] }
skyetils = { git = "https://github.com/skyebird189/skyetils" }

[build-dependencies]
cc = "1.0.83"

[dev-dependencies]
sdl2 = "0.35.2"
ctrlc = "3.2.5"
