[package]
name = "mxload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mixr = { path = "../mixr" }
skyetils = { git = "https://github.com/skyebird189/skyetils" }

[dev-dependencies]
sdl2 = "0.35.2"
ctrlc = "3.2.5"