[package]
name = "mxplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mixr = { path = "../mixr" }
mxload = { path = "../mxload" }
sdl2 = { version = "0.35.2", features = ["bundled"] }
libc = "0.2.138"
ctrlc = "3.2.4"
clap = { version = "4.0.32", features = ["derive"] }