[package]
name = "mxplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
sdl2 = { version = "0.35.2", features = ["bundled"] }
ctrlc = "3.2.5"

mixr = { path = "../mixr" }
mxload = { path = "../mxload" }
